--- a/mozer/hw6/app/src/main/res/layout/fragment_add_note.xml
+++ b/mozer/hw6/app/src/main/res/layout/fragment_add_note.xml
@@ -1,20 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/end_view"
-    android:transitionName="shared_element_container"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/end_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:transitionName="shared_element_container">
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:title="QuickNote"
+            app:titleCentered="true"
+            app:navigationIcon="@drawable/ic_arrow_back" />
+    </com.google.android.material.appbar.AppBarLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
         app:boxStrokeWidth="0dp"
-        app:boxStrokeWidthFocused="0dp"
+        app:boxStrokeWidthFocused="1dp"
         app:counterEnabled="true"
-        app:counterMaxLength="180">
+        app:counterMaxLength="180"
+        android:layout_marginTop="12dp"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/text_input"
@@ -28,7 +43,7 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center|bottom"
-        android:layout_marginBottom="16dp"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
         app:icon="@drawable/ic_send" />
-</FrameLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
