--- a/mozer/hw7/app/src/main/res/navigation/nav_graph.xml
+++ b/mozer/hw7/app/src/main/res/navigation/nav_graph.xml
@@ -6,21 +6,22 @@
 
     <fragment
         android:id="@+id/feedFragment"
-        android:name="com.example.hw7.FeedFragment"
+        android:name="com.example.hw7.ui.FeedFragment"
         android:label="FeedFragment" >
         <action
             android:id="@+id/action_feedFragment_to_postFragment"
             app:destination="@id/postFragment" />
-        <argument
-            android:name="post_id"
-            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/postFragment"
-        android:name="com.example.hw7.PostFragment"
-        android:label="PostFragment" />
+        android:name="com.example.hw7.ui.PostFragment"
+        android:label="PostFragment" >
+        <argument
+            android:name="postId"
+            app:argType="integer" />
+    </fragment>
     <fragment
         android:id="@+id/profileFragment"
-        android:name="com.example.hw7.ProfileFragment"
+        android:name="com.example.hw7.ui.ProfileFragment"
         android:label="ProfileFragment" />
 </navigation>
