--- a/mozer/hw7/app/src/main/res/layout/fragment_post.xml
+++ b/mozer/hw7/app/src/main/res/layout/fragment_post.xml
@@ -4,20 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
             android:elevation="0dp"
             app:navigationIcon="@drawable/ic_arrow_back"
             app:title="Post"
-            app:titleCentered="true"
-            app:titleTextColor="@color/black_text" />
+            app:titleCentered="true" />
     </com.google.android.material.appbar.AppBarLayout>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -29,7 +30,7 @@
             android:layout_height="40dp"
             android:layout_margin="16dp"
             android:scaleType="centerCrop"
-            android:src="@color/black"
+            tools:src="@color/black"
             android:theme="@style/Theme.Hw7.CornerSize50Percent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -41,7 +42,6 @@
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="14dp"
             android:text="@string/cardTitle"
-            android:textColor="@color/black_text"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -53,8 +53,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="4dp"
             android:text="@string/subtitle"
-            android:textColor="@color/black_text"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/profile_image"
@@ -64,7 +64,7 @@
             android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginTop="12dp"
+            android:layout_margin="16dp"
             android:background="@color/divider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:ellipsize="end"
-            android:textColor="@color/black_text"
+
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -89,8 +89,8 @@
             style="@style/Theme.Hw7.SelectedCornerRadius"
             android:layout_width="0dp"
             android:layout_height="380dp"
-            android:scaleType="centerCrop"
             android:layout_margin="16dp"
+            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cardText"
