--- a/mozer/hw7/app/src/main/res/layout/card_view.xml
+++ b/mozer/hw7/app/src/main/res/layout/card_view.xml
@@ -6,9 +6,7 @@
     app:cardElevation="8dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="16dp"
-    android:layout_marginTop="16dp"
-    android:backgroundTint="@color/white"
+    android:layout_marginBottom="16dp"
     app:cardCornerRadius="12dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -33,7 +31,6 @@
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="14dp"
             android:text="@string/cardTitle"
-            android:textColor="@color/black_text"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +43,6 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:text="@string/subtitle"
-            android:textColor="@color/black_text"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/profile_image"
@@ -69,7 +65,7 @@
             android:layout_marginHorizontal="16dp"
             android:layout_marginVertical="8dp"
             android:ellipsize="end"
-            android:textColor="@color/black_text"
+
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@id/picture"
             app:layout_constraintEnd_toEndOf="parent"
