--- a/mozer/hw7/app/src/main/res/layout/fragment_feed.xml
+++ b/mozer/hw7/app/src/main/res/layout/fragment_feed.xml
@@ -11,11 +11,9 @@
         <com.google.android.material.appbar.MaterialToolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/toolbar"
-            android:elevation="1dp"
+            android:elevation="0dp"
             app:title="Feed"
-            app:titleCentered="true"
-            app:titleTextColor="@color/black_text" />
+            app:titleCentered="true" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -25,15 +23,16 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="@dimen/navigation_view_height"
         android:clipToPadding="false"
-        android:paddingBottom="42dp"
+        android:paddingHorizontal="16dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="40dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:layout_width="56dp"
         android:layout_height="56dp"
+        android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
-        android:backgroundTint="@color/fub"
-        app:icon="@drawable/ic_add"
-        android:layout_gravity="bottom|end"/>
+        app:icon="@drawable/ic_add" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
