--- a/mozer/hw7/app/src/main/res/layout/fragment_profile.xml
+++ b/mozer/hw7/app/src/main/res/layout/fragment_profile.xml
@@ -12,27 +12,18 @@
         <com.google.android.material.appbar.MaterialToolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/toolbar"
-            android:elevation="1dp"
+            android:elevation="0dp"
+            app:menu="@menu/profile_menu"
             app:title="Profile"
-            app:titleCentered="true"
-            app:titleTextColor="@color/black_text" />
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+            app:titleCentered="true" />
 
         <com.google.android.material.card.MaterialCardView
             style="@style/Widget.Material3.CardView.Elevated"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:backgroundTint="@color/white"
-            app:cardCornerRadius="16dp"
             android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="16dp"
+            app:cardCornerRadius="16dp"
             app:cardElevation="8dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -51,53 +42,50 @@
                     tools:src="@color/black" />
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/title"
+                    android:id="@+id/profile_name"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="16dp"
                     android:layout_marginTop="14dp"
                     android:text="@string/cardTitle"
-                    android:textColor="@color/black_text"
-                    android:textSize="24sp"
-                    android:textStyle="bold"
+                    android:textSize="22sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/profile_image"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/subtitle"
+                    android:id="@+id/profile_bio"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="16dp"
+                    android:layout_marginTop="4dp"
                     android:text="@string/subtitle"
-                    android:textColor="@color/black_text"
                     android:textSize="12sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/profile_image"
-                    app:layout_constraintTop_toBottomOf="@id/title" />
+                    app:layout_constraintTop_toBottomOf="@id/profile_name" />
 
                 <View
                     android:id="@+id/divider"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginTop="28dp"
+                    android:layout_marginTop="32dp"
                     android:background="@color/divider"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/subtitle" />
+                    app:layout_constraintTop_toBottomOf="@id/profile_bio" />
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/images_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="48dp"
                     android:layout_marginTop="14dp"
-                    android:textColor="@color/black_text"
                     android:textSize="28sp"
+                    app:layout_constraintEnd_toEndOf="@id/images"
+                    app:layout_constraintStart_toStartOf="@id/images"
 
-                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/divider"
-                    tools:text="12" />
+                    tools:text="3" />
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/images"
@@ -105,8 +93,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="44dp"
                     android:text="@string/profile_images"
-                    android:textColor="@color/black_text"
+                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                     android:textSize="12sp"
+                    app:layout_constraintEnd_toStartOf="@+id/subscribers"
+                    app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/images_count" />
 
@@ -114,13 +104,10 @@
                     android:id="@+id/subscribers_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="102dp"
                     android:layout_marginTop="14dp"
-                    android:layout_marginEnd="102dp"
-                    android:textColor="@color/black_text"
                     android:textSize="28sp"
-                    app:layout_constraintEnd_toStartOf="@+id/posts_count"
-                    app:layout_constraintStart_toEndOf="@+id/images_count"
+                    app:layout_constraintEnd_toEndOf="@id/subscribers"
+                    app:layout_constraintStart_toStartOf="@id/subscribers"
                     app:layout_constraintTop_toTopOf="@id/divider"
                     tools:text="5" />
 
@@ -130,9 +117,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="74dp"
                     android:text="@string/profile_subscribers"
-                    android:textColor="@color/black_text"
+                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                     android:textSize="12sp"
-                    app:layout_constraintStart_toEndOf="@id/images"
+                    app:layout_constraintEnd_toStartOf="@+id/posts"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/images"
                     app:layout_constraintTop_toBottomOf="@id/subscribers_count" />
 
                 <com.google.android.material.textview.MaterialTextView
@@ -140,24 +129,24 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="14dp"
-                    android:layout_marginEnd="48dp"
-                    android:textColor="@color/black_text"
                     android:textSize="28sp"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toEndOf="@id/posts"
+                    app:layout_constraintStart_toStartOf="@id/posts"
                     app:layout_constraintTop_toBottomOf="@+id/divider"
-                    tools:text="16" />
+                    tools:text="3" />
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/posts"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="70dp"
-                    android:layout_marginEnd="42dp"
+                    android:layout_marginEnd="44dp"
                     android:text="@string/profile_posts"
-                    android:textColor="@color/black_text"
+                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                     android:textSize="12sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/subscribers"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/subscribers"
                     app:layout_constraintTop_toBottomOf="@id/posts_count" />
 
                 <View
@@ -172,12 +161,12 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btn_subscribe"
+                    style="@style/Widget.Material3.Button.ElevatedButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
-                    android:backgroundTint="@color/secondary_container"
-                    android:text="@string/subscribe"
-                    android:textColor="@color/black_text"
+                    android:backgroundTint="?attr/colorSecondaryContainer"
+                    android:text="@string/edit"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -189,9 +178,7 @@
             style="@style/Widget.Material3.CardView.Elevated"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/white"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_margin="16dp"
             app:cardCornerRadius="16dp"
             app:cardElevation="8dp">
 
@@ -200,47 +187,89 @@
                 android:layout_height="match_parent">
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/images_list"
+                    android:id="@+id/images_card"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="18dp"
-                    android:text="@string/profile_images"
-                    android:textColor="@color/black_text"
+                    android:text="@string/profile_images_title"
+                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                     android:textSize="14sp"
-                    android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="18dp"
-                    android:background="@color/white"
-                    android:src="@drawable/ic_arrow"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_margin="16dp"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/ic_forward_chevron"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <androidx.recyclerview.widget.RecyclerView
+                <com.example.hw7.ui.profile.ItemImagesList
+                    android:id="@+id/item1"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginHorizontal="16dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
                     android:layout_marginTop="18dp"
                     android:layout_marginBottom="16dp"
-                    android:orientation="horizontal"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/images_list" />
+                    app:layout_constraintTop_toBottomOf="@id/images_card" />
+
+                <com.example.hw7.ui.profile.ItemImagesList
+                    android:id="@+id/item2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="18dp"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/item1"
+                    app:layout_constraintTop_toBottomOf="@id/images_card" />
+
+                <com.example.hw7.ui.profile.ItemImagesList
+                    android:id="@+id/item3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="18dp"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/item2"
+                    app:layout_constraintTop_toBottomOf="@id/images_card" />
+
+                <com.example.hw7.ui.profile.ItemImagesList
+                    android:id="@+id/item4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="18dp"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/item3"
+                    app:layout_constraintTop_toBottomOf="@id/images_card"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
-    </androidx.appcompat.widget.LinearLayoutCompat>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/posts_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingHorizontal="16dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
+
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:layout_width="56dp"
         android:layout_height="56dp"
+        android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
-        android:backgroundTint="@color/fub"
         app:icon="@drawable/ic_add"
-        android:layout_gravity="bottom|end"/>
+        app:iconSize="14dp" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
