--- a/mozer/hw7/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/mozer/hw7/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:icon="@drawable/ic_feed"
+    <item android:icon="@drawable/ic_view_stream"
         android:id="@+id/feedFragment"
         android:title="@string/feed"
         app:showAsAction="ifRoom"/>
