--- a/mozer/hw7/app/src/main/res/navigation/nav_graph.xml
+++ b/mozer/hw7/app/src/main/res/navigation/nav_graph.xml
@@ -18,10 +18,10 @@
         android:label="PostFragment" >
         <argument
             android:name="postId"
-            app:argType="integer" />
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
-        android:name="com.example.hw7.ui.ProfileFragment"
+        android:name="com.example.hw7.ui.profile.ProfileFragment"
         android:label="ProfileFragment" />
 </navigation>
