--- a/mozer/hw7/app/src/main/res/layout/activity_main.xml
+++ b/mozer/hw7/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:id="@+id/navigationView"
         style="@style/Widget.Material3.BottomNavigationView.ActiveIndicator"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/navigation_view_height"
+        android:layout_height="wrap_content"
         android:elevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
