nanoPost : added paging

--- a/mozer/hw7/app/src/main/res/layout/fragment_feed.xml
+++ b/mozer/hw7/app/src/main/res/layout/fragment_feed.xml
@@ -18,7 +18,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler"
+        android:id="@+id/feed_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="@dimen/navigation_view_height"
