--- a/schmidt/HW3/app/src/main/res/layout/activity_main.xml
+++ b/schmidt/HW3/app/src/main/res/layout/activity_main.xml
@@ -17,12 +17,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:title="@string/app_name"
-            app:titleCentered="true" />
+            app:titleCentered="true"
+            android:elevation="0dp"/>
 
         <com.google.android.material.tabs.TabLayout
             style="@style/Widget.MaterialComponents.TabLayout.PrimarySurface"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:tabGravity="center">
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="match_parent"
@@ -72,6 +74,7 @@
     </androidx.core.widget.NestedScrollView>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigation"
+        style="@style/Widget.MaterialComponents.BottomNavigationView.PrimarySurface"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
