--- a/schmidt/HW2/app/src/main/res/drawable/ic_red_line.xml
+++ b/schmidt/HW2/app/src/main/res/drawable/ic_red_line.xml
@@ -2,8 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="10dp"
     android:shape="rectangle">
-    <solid android:color="#90FF2515" />
+    <solid android:color="#F44336" />
     <corners
+
         android:topRightRadius="50dp"
         android:topLeftRadius="50dp"
         android:bottomRightRadius="50dp"
