--- a/mozer/hw7/app/src/main/res/layout/fragment_profile.xml
+++ b/mozer/hw7/app/src/main/res/layout/fragment_profile.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -224,13 +223,13 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
-                            android:layout_marginEnd="8dp"
                             android:layout_marginTop="18dp"
+                            android:layout_marginEnd="8dp"
                             android:layout_marginBottom="16dp"
                             android:orientation="horizontal"
                             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                            app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@id/images_card" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -240,7 +239,7 @@
             <com.google.android.material.appbar.MaterialToolbar
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="?attr/colorOnPrimary"
+                android:background="?attr/background"
                 android:elevation="0dp"
                 app:layout_collapseMode="pin"
                 app:menu="@menu/profile_menu"
