--- a/mozer/hw7/app/src/main/res/layout/item_images_list.xml
+++ b/mozer/hw7/app/src/main/res/layout/item_images_list.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <com.google.android.material.imageview.ShapeableImageView
-        style="@style/Theme.Hw7.CornerRadius"
+        android:theme="@style/Theme.Hw7.CornerRadius"
         android:id="@+id/picture"
         android:layout_width="80dp"
         android:layout_height="80dp"
