--- a/mozer/hw7/app/src/main/res/values/colors.xml
+++ b/mozer/hw7/app/src/main/res/values/colors.xml
@@ -2,7 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-<!--    <color name="black_text">#191C1D</color>-->
     <color name="divider">#4A454E</color>
     <color name="icon_color">#CBC4CE</color>
 
@@ -34,26 +33,26 @@
     <color name="md_theme_light_inversePrimary">#D0BCFF</color>
     <color name="md_theme_light_shadow">#000000</color>
     <color name="md_theme_light_primaryInverse">#D0BCFF</color>
-    <color name="md_theme_dark_primary">#D0BCFF</color>
-    <color name="md_theme_dark_onPrimary">#381E72</color>
-    <color name="md_theme_dark_primaryContainer">#4F378B</color>
-    <color name="md_theme_dark_onPrimaryContainer">#EADDFF</color>
-    <color name="md_theme_dark_secondary">#CCC2DC</color>
-    <color name="md_theme_dark_onSecondary">#332D41</color>
+    <color name="md_theme_dark_primary">#D7B9FF</color>
+    <color name="md_theme_dark_onPrimary">#42008B</color>
+    <color name="md_theme_dark_primaryContainer">#5F00BF</color>
+    <color name="md_theme_dark_onPrimaryContainer">#EDDBFF</color>
+    <color name="md_theme_dark_secondary">#CEC2DA</color>
+    <color name="md_theme_dark_onSecondary">#352D41</color>
     <color name="md_theme_dark_secondaryContainer">#4B4357</color>
-    <color name="md_theme_dark_onSecondaryContainer">#E8DEF8</color>
-    <color name="md_theme_dark_tertiary">#EFB8C8</color>
-    <color name="md_theme_dark_onTertiary">#492532</color>
-    <color name="md_theme_dark_tertiaryContainer">#633B48</color>
-    <color name="md_theme_dark_onTertiaryContainer">#FFD8E4</color>
+    <color name="md_theme_dark_onSecondaryContainer">#EBDEF8</color>
+    <color name="md_theme_dark_tertiary">#F1B8C3</color>
+    <color name="md_theme_dark_onTertiary">#4A252E</color>
+    <color name="md_theme_dark_tertiaryContainer">#643B44</color>
+    <color name="md_theme_dark_onTertiaryContainer">#FFD9E1</color>
     <color name="md_theme_dark_error">#F2B8B5</color>
     <color name="md_theme_dark_errorContainer">#8C1D18</color>
     <color name="md_theme_dark_onError">#601410</color>
     <color name="md_theme_dark_onErrorContainer">#F9DEDC</color>
-    <color name="md_theme_dark_background">#1C1B1F</color>
-    <color name="md_theme_dark_onBackground">#E6E1E5</color>
-    <color name="md_theme_dark_surface">#1C1B1F</color>
-    <color name="md_theme_dark_onSurface">#E6E1E5</color>
+    <color name="md_theme_dark_background">#1D1B1E</color>
+    <color name="md_theme_dark_onBackground">#E7E1E6</color>
+    <color name="md_theme_dark_surface">#1D1B1E</color>
+    <color name="md_theme_dark_onSurface">#E7E1E6</color>
     <color name="md_theme_dark_surfaceVariant">#49454F</color>
     <color name="md_theme_dark_onSurfaceVariant">#CAC4D0</color>
     <color name="md_theme_dark_outline">#938F99</color>
