--- a/app/src/main/res/layout/promotion.xml
+++ b/app/src/main/res/layout/promotion.xml
@@ -1,48 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/grey_rectangle_width"
-    android:layout_height="@dimen/grey_rectangle_height"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="@drawable/grey_background">
 
     <TextView
         android:id="@+id/sale2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/circle_diameter"
+        android:layout_height="@dimen/circle_diameter"
         android:layout_marginStart="@dimen/default_margin_start"
         android:layout_marginTop="16dp"
-        android:text="@string/sale2"
-        android:paddingTop="8dp"
-        android:paddingStart="8dp"
         android:background="@drawable/circle"
+        android:gravity="center"
+        android:text="@string/sale2"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/theBestPay"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_start_theBestPay"
-        android:layout_marginEnd="@dimen/margin_end_theBestPay"
+        android:layout_marginEnd="@dimen/default_margin_end"
         android:text="@string/best_pay_text"
-        android:textSize="@dimen/the_best_pay"
         android:textColor="@color/black"
-       app:layout_constraintEnd_toEndOf="parent"
-       app:layout_constraintBottom_toBottomOf="@+id/sale2"
+        android:textSize="@dimen/the_best_pay"
+        app:layout_constraintBottom_toBottomOf="@+id/sale2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/sale2"
-       app:layout_constraintTop_toTopOf="@id/sale2" />
+        app:layout_constraintTop_toTopOf="@id/sale2" />
 
     <TextView
         android:id="@+id/timer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="@dimen/margin_top_timer"
+        android:layout_marginBottom="8dp"
         android:text="@string/timer"
         android:textColor="@color/red"
-        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sale2"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/sale2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
